# bidmart-wallet-service-rust

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  heroku.yml  sonar-project.properties  wallet.db
.github/workflows/: cd.yml  ci.yml  trigger-vps-deploy.yml
docs/: 0. Overview.md  1. Software Design.md  2. Software Quality.md  3. Software Architecture.md  4. Software Deployment.md  6. Non Functional Considerations.md  7. Profiling Report.md  8. Spesifikasi.md  9. Api.md  Optimization Report.md  Profiling Report.md  deployment-strategy.md  openapi.yaml
docs/evidence/: README.md
migrations/: 20260429000000_init.sql  20260521000000_unique_hold_auction_bid.sql  20260522000000_unique_midtrans_wallet_transactions.sql
proto/: wallet.proto
src/: lib.rs  main.rs  server.rs  wallet.rs
src/grpc/: mod.rs
src/http/: dto.rs  metrics.rs  metrics_auth.rs  mod.rs  router.rs
src/messaging/: mod.rs  provisioning_consumer.rs
src/payment/: mod.rs
src/persistence/: models.rs  repositories.rs
src/service/: mod.rs  payment_strategy.rs  reconciliation.rs  wallet_commands.rs  wallet_service.rs  wallet_validation.rs
tests/: api_tests.rs  domain_tests.rs  grpc_tests.rs  load_performance_harness_tests.rs  metrics_tests.rs  pattern_tests.rs  payment_tests.rs  persistence_tests.rs  platform_connection_tests.rs  provisioning_tests.rs  service_tests.rs
tests/load/: run_load_test.sh
