[package]
name = "bidmart-wallet-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
sqlx = { version = "0.7.4", features = ["any", "macros", "postgres", "runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tonic = "0.12"
prost = "0.13"

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.14", features = ["flamegraph"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1"] }
